force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/clofor_com_cfs__ManufactureProcess__c.object-meta.xml
<CustomObject>
    <label>Manufacture Process</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Manufacture Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacture Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>