force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/fields/clofor_com_cfs__ManufactureProcessName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManufactureProcessName__c</fullName>
    <label>Manufacture Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>