force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/fields/clofor_com_cfs__MNF_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MNF_Process_Status__c</fullName>
    <label>MNF Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>On Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>