force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/fields/clofor_com_cfs__Notes__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>