force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/fields/clofor_com_cfs__ProcessEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProcessEndDate__c</fullName>
    <label>Process End Date</label>
    <type>Date</type>
</CustomField>