force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/fields/clofor_com_cfs__ProcessStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProcessStartDate__c</fullName>
    <label>Process Start Date</label>
    <type>Date</type>
</CustomField>