force-app/main/default/objects/clofor_com_cfs__ManufactureProcess__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ManufactureProcessName__c</columns>
    <columns>clofor_com_cfs__MNF_Process_Status__c</columns>
    <columns>clofor_com_cfs__ProcessStartDate__c</columns>
    <columns>clofor_com_cfs__ProcessEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>